// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-sign-in spec: Render logic -> should render a \`sign in\` form by default 1`] = `
<amplify-sign-in>
  <amplify-form-section headertext="Sign into your account">
    <amplify-federated-buttons></amplify-federated-buttons>
    <amplify-auth-fields></amplify-auth-fields>
  </amplify-form-section>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withEmptyFederatedObject 1`] = `
<amplify-sign-in>
  <amplify-form-section headertext="Sign into your account">
    <amplify-federated-buttons></amplify-federated-buttons>
    <amplify-auth-fields></amplify-auth-fields>
  </amplify-form-section>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withFederated 1`] = `
<amplify-sign-in>
  <amplify-form-section headertext="Sign into your account">
    <amplify-federated-buttons></amplify-federated-buttons>
    <amplify-strike>
      or
    </amplify-strike>
    <amplify-auth-fields></amplify-auth-fields>
  </amplify-form-section>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withFederatedAndOverrideStyle 1`] = `
<amplify-sign-in>
  <amplify-form-section headertext="Sign into your account" overridestyle="">
    <amplify-federated-buttons overridestyle=""></amplify-federated-buttons>
    <amplify-strike overridestyle="">
      or
    </amplify-strike>
    <amplify-auth-fields></amplify-auth-fields>
  </amplify-form-section>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withOverrideStyle 1`] = `
<amplify-sign-in>
  <amplify-form-section headertext="Sign into your account">
    <amplify-federated-buttons></amplify-federated-buttons>
    <amplify-auth-fields></amplify-auth-fields>
  </amplify-form-section>
</amplify-sign-in>
`;
